--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@deck.gl/aggregation-layers": "^8.0.16",
+    "@deck.gl/core": "^8.0.16",
+    "@deck.gl/layers": "^8.0.16",
+    "@deck.gl/react": "^8.0.16",
+    "@material-ui/core": "^4.9.4",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,16 +16,33 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "clsx": "^1.1.0",
+    "d3-ease": "^1.0.6",
+    "global": "^4.4.0",
+    "immutable": "^4.0.0-rc.12",
+    "lodash.throttle": "^4.1.1",
+    "oboe": "^2.1.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-map-gl": "^5.2.3",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
-    "typescript": "~3.7.2"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "typescript": "~3.7.2",
+    "victory": "^34.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier-watch": "onchange '**/*.ts*' -- prettier --write {{changed}}"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +58,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/d3-ease": "^1.0.9",
+    "@types/immutable": "^3.8.7",
+    "@types/lodash.throttle": "^4.1.6",
+    "@types/oboe": "^2.0.28",
+    "@types/react-map-gl": "^5.2.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "@types/victory": "^33.1.4",
+    "husky": "^4.2.3",
+    "onchange": "^6.1.0",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1"
   }
 }
