--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^16.9.0",
     "clsx": "^1.1.0",
     "d3-ease": "^1.0.6",
+    "fg-loadcss": "^2.1.0",
     "global": "^4.4.0",
     "immutable": "^4.0.0-rc.12",
     "lodash.throttle": "^4.1.1",
@@ -26,6 +27,7 @@
     "react-dom": "^16.13.0",
     "react-map-gl": "^5.2.3",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -66,6 +68,7 @@
     "@types/oboe": "^2.0.28",
     "@types/react-map-gl": "^5.2.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "@types/victory": "^33.1.4",
