--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^1.1.0",
     "d3-ease": "^1.0.6",
     "fg-loadcss": "^2.1.0",
+    "gh-pages": "^2.2.0",
     "global": "^4.4.0",
     "immutable": "^4.0.0-rc.12",
     "lodash.throttle": "^4.1.1",
@@ -39,6 +40,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "prettier-watch": "onchange '**/*.ts*' -- prettier --write {{changed}}"
   },
   "husky": {
